--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- add "folder" icon to submenu items (like in gnome menus)
 - queue action updates upon grouped action execution 
 - introduce gxk_action_group_select()-freeze/thaw to surround select/exec pair
 - bst_action_list_from_cats() / bst_action_list_add_cat(): move check+exec+data at the end of arg list
