Added Portuguese translation.
2003-11-18  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt.po: Added Portuguese translation.

svn path=/trunk/; revision=1544

--- a/po-bse/ChangeLog
+++ b/po-bse/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-18  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Added Portuguese translation.
+
 2003-11-16  Christian Neumair  <chris@gnome-de.org>
 
 	* POTFILES.skip: Added/removed some new/nonexisting files.
