--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Tue Nov 18 18:51:53 2003  Tim Janik  <timj@gtk.org>
+
+	* bsequery.c (main): fix root type handling.
+
+	* bseobject.proc: removed.
+
 Sun Nov 16 13:30:00 2003  Christian Neumair  <chris@gnome-de.org>
 
 	* bsebiquadfilter.c: added xgettext keyword (no-c-format) comment
