--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Nov 18 18:38:37 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxktexttools.c (text_buffer_tagdef): fix ref-count leak.
+
 Mon Nov 17 23:18:34 2003  Tim Janik  <timj@gtk.org>
 	
 	* beast-gtk/bstutils.[hc]: removed BST_SIZE_*, there are GXK_ICON_SIZE_*
