--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Tue Nov 18 20:03:38 2003  Tim Janik  <timj@gtk.org>
+
+	* engine-mplan.txt: renamed (from gsl-mplan.txt).
+
 Tue Nov 18 18:51:53 2003  Tim Janik  <timj@gtk.org>
 
 	* bsequery.c (main): fix root type handling.
