NEWS/contributors update
svn path=/trunk/; revision=1559

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Overview of Changes in BEAST/BSE 0.5.6:
 * Updated Serbian translation [Danilo Segan]
 * Added Catalan translation [Xavier Conde Rueda]
 * Added Greek translation [Kostas Papadimas]
+* Added Portuguese translation [Duarte Loreto]
 
 Overview of Changes in BEAST/BSE 0.5.5:
 
