--- a/TODO
+++ b/TODO
@@ -4,6 +4,8 @@ FIXMES:
 - auto-connect viewable-changed to gadget notebooks
 - fix accel activation of menu items in popups on invisible notebook pages
 - add one-shot property to factories
+- i18n: for _label="" define label and _label after translation
+- for menu factory branches, translate submenus *after* using the path as key
 
 - extend module info dialog to cover author license etc.
 - remove/rename test-string.bse
