--- a/po/sr.po
+++ b/po/sr.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-11-18 23:18+0100\n"
-"PO-Revision-Date: 2003-11-18 23:27+0100\n"
+"POT-Creation-Date: 2003-11-21 01:26+0100\n"
+"PO-Revision-Date: 2003-11-21 01:31+0100\n"
 "Last-Translator: Данило Шеган <danilo@prevod.org>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -464,16 +464,104 @@ msgstr "Учитавам „%s“"
 msgid "Loading project \"%s\""
 msgstr "Учитавам пројекат „%s“"
 
-#: beast-gtk/bstmain.c:688
+#. graphics
+#: beast-gtk/bstmain.c:659
+msgid "Cyria Arweiler"
+msgstr "Сирија Арвајлер (Cyria Arweiler)"
+
+#: beast-gtk/bstmain.c:660
+msgid "Tuomas Kuosmanen"
+msgstr "Томас Косманен (Tuomas Kuosmanen)"
+
+#: beast-gtk/bstmain.c:661
+msgid "Jakub Steiner"
+msgstr "Јакуб Штајнер (Jakub Steiner)"
+
+# несигурно
+#: beast-gtk/bstmain.c:662
+msgid "Ville Pätsi"
+msgstr "Виље Петси (Ville Pätsi)"
+
+#. general code and fixes
+#: beast-gtk/bstmain.c:664
+msgid "Christian Neumair"
+msgstr "Кристијан Нојмар (Christian Neumair)"
+
+#: beast-gtk/bstmain.c:665
+msgid "Sam Hocevar"
+msgstr "Сам Хочевар (Sam Hocevar)"
+
+#: beast-gtk/bstmain.c:666
+msgid "Alper Ersoy"
+msgstr "Алпер Ерсој (Alper Ersoy)"
+
+#: beast-gtk/bstmain.c:667
+msgid "Ben Collver"
+msgstr "Бен Колвер (Ben Collver)"
+
+#: beast-gtk/bstmain.c:668
+msgid "Tim Janik"
+msgstr "Тим Јаник (Tim Janik)"
+
+#: beast-gtk/bstmain.c:669
+msgid "Stefan Westerfeld"
+msgstr "Штефан Вестерфелд (Stefan Westerfeld)"
+
+#. plugins
+#: beast-gtk/bstmain.c:671
+msgid "David A. Bartold"
+msgstr "Дејвид А. Бартолд (David A. Bartold)"
+
+#. _("Tim Janik"),
+#. _("Stefan Westerfeld"),
+#. languages
+#: beast-gtk/bstmain.c:675
+msgid "Metin Amiroff"
+msgstr "Метин Амироф (Metin Amiroff)"
+
+#: beast-gtk/bstmain.c:676
+msgid "Alexandre Prokoudine"
+msgstr "Александар Прокоудин"
+
+#: beast-gtk/bstmain.c:677 beast-gtk/bstmain.c:683
+msgid "Danilo Segan"
+msgstr "Данило Шеган"
+
+#: beast-gtk/bstmain.c:678
+msgid "Christian Rose"
+msgstr "Кристијан Роуз (Christian Rose)"
+
+#. _("Christian Neumair"),
+#: beast-gtk/bstmain.c:680
+msgid "Miloslav Trmac"
+msgstr "Милослав Трмац"
+
+#: beast-gtk/bstmain.c:681
+msgid "Duarte Loreto"
+msgstr "Дуарте Лорето"
+
+#: beast-gtk/bstmain.c:682
+msgid "Vincent van Adrighem"
+msgstr "Винсент ван Адригем (Vincent van Adrighem)"
+
+#: beast-gtk/bstmain.c:684
+msgid "Xavier Conde Rueda"
+msgstr "Ксавијер Конде Руеда (Xavier Conde Rueda)"
+
+#: beast-gtk/bstmain.c:685
+msgid "Kostas Papadimas"
+msgstr "Костас Пападимас"
+
+#: beast-gtk/bstmain.c:690
 msgid "BEAST About"
 msgstr "О Звери"
 
-#: beast-gtk/bstmain.c:689
+#: beast-gtk/bstmain.c:691
 #, c-format
 msgid "BEAST Version %s"
 msgstr "ЗВЕР, издање %s"
 
-#: beast-gtk/bstmain.c:690
+#: beast-gtk/bstmain.c:692
 msgid "Contributions made by:"
 msgstr "Такође допринели:"
 
@@ -829,7 +917,8 @@ msgid ""
 "properties"
 msgstr ""
 "Алат за уређивање (1-3. дугме миша)\n"
-"Користите 1. дугме да направите везе, 2. дугме за премештање и 3. дугме да измените особине"
+"Користите 1. дугме да направите везе, 2. дугме за премештање и 3. дугме да "
+"измените особине"
 
 #: beast-gtk/bstsnetrouter.c:77
 msgid "Edit"
