--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Nov 21 04:01:56 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstutils.c (bst_action_list_add_cat): provide category leaf as
+	action tooltip, usefull for icon-only palettes.
+
 Fri Nov 21 03:48:58 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstsnetrouter.c: adapt to the palette now using a GxkSimpleLabel
