--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov 21 16:54:24 2003  Tim Janik  <timj@gtk.org>
+
+	* POTFILES.in: removed UTF-8 encoding setting.
+
 2003-11-21  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
