--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Nov 21 16:46:19 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstmain.c (beast_show_about_box): removed i18n markup from
+	contributor names. turned non-ascii chars (utf-8) into hexadecimal
+	escapes (\x00). left a comment on how to enter utf-8 encoded author
+	names.
+
 Fri Nov 21 04:01:56 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstutils.c (bst_action_list_add_cat): provide category leaf as
