Updated Serbian translation.
2003-11-23  Danilo Å egan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

	* POTFILES.in: Added beast-gtk/gxk/gxksimplelabel.c.

svn path=/trunk/; revision=1567

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-23  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
+	* POTFILES.in: Added beast-gtk/gxk/gxksimplelabel.c.
+
 Fri Nov 21 16:54:24 2003  Tim Janik  <timj@gtk.org>
 
 	* POTFILES.in: removed UTF-8 encoding setting.
