--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Nov 22 16:18:12 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkracktable.[hc]: CVS-copied here
+	from beast-gtk/bstracktable.[hc].
+
 Fri Nov 21 16:46:19 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstmain.c (beast_show_about_box): removed i18n markup from
