--- a/po-bse/ChangeLog
+++ b/po-bse/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-24  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Updated dutch translation.
+
 2003-11-18  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Added Portuguese translation.
