Added resize() for sequences.
Fri Nov 28 00:53:37 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bsecxxsmart.h: Added resize() for sequences.

svn path=/trunk/; revision=1584

--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov 28 00:53:37 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsecxxsmart.h: Added resize() for sequences.
+
 Wed Nov 26 22:14:44 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bserecords.idl: Proxy is gone.
