--- a/TODO
+++ b/TODO
@@ -288,6 +288,7 @@ sfidl:
   - handle non-validated sequences and records in generation code (things
     can be demarshalled in non-validated form after incompatible changes)
   - generate foo-i18n.c files for foo.idl to be translated
+  - install sfidl
   fixes:
   - support N/A choice values, currently hardcoded for BseErrorType in bseprocidl
   - Const lookups don't honour namespacing
